--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
       <h1>Algoritmos para Grafos</h1>
       <nav class="nav">
         <ul>
-          <li><a href="https://frankzalarcon.github.io/proyecto-fina-eda/index.html">Documentacion</a></li>
+          <li><a href="https://frankzalarcon.github.io/proyecto-fina-eda/index.html" target="_blank">Documentacion</a></li>
           <li><a href="https://github.com/FrankzAlarcon/proyecto-fina-eda" target="_blank">Github</a></li>
         </ul>
       </nav>
